--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 						<input type="text" class="form-group new-toy">
 					</div>
 					<div class="landmark-div">
-						<div class="form-group new-landmark">
+						<div class="form-group new-landmark-div">
 							<label for="new-landmark">Landmark</label>
 							<input type="text" class="form-group new-landmark">
 						</div>
